<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="clinic"
            type="hasan.mohamed.shehata.homathonfrontapp.pojo.Clinic" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_margin="@dimen/textview_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layoutDirection="rtl"
        android:padding="@dimen/textview_padding"
        android:background="@drawable/rv_item_background_released"
        android:layout_height="wrap_content">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/navTitleTextSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/clinic"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_margin="@dimen/navItemTextSize"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/main_title_clinic_id"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/clinic_name"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_margin="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/clinic_name_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/main_title_clinic_id"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@{clinic.name}"
            android:textSize="@dimen/news_title_textSize"
            android:singleLine="true"
            android:id="@+id/_clinic_name_et_id"
            app:layout_constraintStart_toEndOf="@+id/clinic_name_id_tv"
            app:layout_constraintTop_toTopOf="@+id/clinic_name_id_tv"
            app:layout_constraintBottom_toBottomOf="@id/clinic_name_id_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/clinic_details"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/clinic_details_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/_clinic_name_et_id"
            />

        <EditText
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:text="@{clinic.details}"
            android:id="@+id/clinic_details_et_id"
            android:singleLine="false"
            android:layout_margin="@dimen/textview_padding"
            app:layout_constraintTop_toBottomOf="@+id/clinic_details_id_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/clinic_starttime"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/clinic_starttime_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/clinic_details_et_id"
            />
        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            app:layout_constraintTop_toBottomOf="@id/clinic_starttime_id_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/clinic_starttime_timepicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/clinic_estimated_time_mins"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/clinic_estimated_time_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/clinic_starttime_timepicker"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="false"
            android:textSize="@dimen/news_title_textSize"
            android:id="@+id/clinic_session_estimated_time_et"
            android:inputType="number"
            android:text="@{clinic.turntimeinminutes}"
            android:layout_margin="@dimen/textview_padding"
            app:layout_constraintStart_toEndOf="@+id/clinic_estimated_time_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/clinic_starttime_timepicker"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/light"
            android:text="@string/clinic_pick_location_mins"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:padding="@dimen/textview_padding"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/clinic_select_loc_on_map_id_but"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/clinic_estimated_time_id_tv"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/latitude"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/lat_label_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/clinic_select_loc_on_map_id_but"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@{clinic.latitude}"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            android:id="@+id/lat_value_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/clinic_select_loc_on_map_id_but"
            app:layout_constraintStart_toEndOf="@+id/lat_label_id_tv"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/longitude"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/lng_label_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/lat_label_id_tv"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@{clinic.longitude}"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toEndOf="@+id/lat_label_id_tv"
            android:id="@+id/lng_value_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/lat_label_id_tv"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/number_of_patients"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/number_of_patients_label_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/lng_label_id_tv"
            />

        <EditText
            android:id="@+id/number_of_patients_id_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_padding"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:text="@{clinic.numberofpatients}"
            android:textSize="@dimen/news_title_textSize"
            android:inputType="number"
            android:singleLine="false"
            app:layout_constraintStart_toEndOf="@+id/number_of_patients_label_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/lng_label_id_tv" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/newsTitleTextColor"
            android:text="@string/current_turn"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/current_turn_label_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/number_of_patients_id_et"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/light"
            android:text="▲"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/current_turn_tmplate_id_et"
            android:id="@+id/increment_current_turn_id_but"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/current_turn_label_id_tv"/>
        <EditText
            android:id="@+id/current_turn_tmplate_id_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_padding"
            android:layout_marginTop="4dp"
            android:ems="4"
            android:text="@{clinic.currentturn}"
            android:textSize="@dimen/news_title_textSize"
            android:inputType="number"
            android:singleLine="false"
            app:layout_constraintStart_toEndOf="@+id/increment_current_turn_id_but"
            app:layout_constraintEnd_toStartOf="@id/decrement_current_turn_id_but"
            app:layout_constraintTop_toTopOf="@+id/increment_current_turn_id_but"
            app:layout_constraintBottom_toBottomOf="@+id/increment_current_turn_id_but"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_title_textSize"
            android:textColor="@color/light"
            android:text="▼"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/current_turn_tmplate_id_et"
            android:id="@+id/decrement_current_turn_id_but"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/current_turn_label_id_tv"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/navItemTextSize"
            android:textColor="@color/light"
            android:text="@string/save"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/main_components_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clini_tmplate_cancel_id_but"
            android:id="@+id/clini_tmplate_save_id_but"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/decrement_current_turn_id_but"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/navItemTextSize"
            android:textColor="@color/light"
            android:text="@string/cancel"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/main_components_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clini_tmplate_save_id_but"
            android:id="@+id/clini_tmplate_cancel_id_but"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/decrement_current_turn_id_but"
            />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:foregroundGravity="center"
            android:layout_height="wrap_content"
            android:textSize="@dimen/navItemTextSize"
            android:textColor="@color/colorAccent"
            android:text="@string/connection_error"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/textview_padding"
            android:layout_marginRight="@dimen/textview_padding"
            android:layout_marginLeft="@dimen/textview_padding"
            android:id="@+id/connection_error_id_tv"
            app:layout_constraintTop_toBottomOf="@+id/clini_tmplate_cancel_id_but"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>